ajustes para deployment

--- a/variables.env
+++ b/variables.env
@@ -1,2 +1,2 @@
-DB_MONGO=mongodb+srv://admin:admin@cluster0.za0sn.mongodb.net/merntasks
+DB_MONGO=mongodb+srv://dbAdmin:adminDb16@cluster0.za0sn.mongodb.net/merntasks
 SECRETA=palabrasecreta
