--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6"
+  },
+  "engines": { 
+    "node": "16.0.0" 
   }
 }
